# solar

./: Cargo.toml  README.md  rustfmt.toml
solar/: Cargo.toml  solar.conf
solar-client/: Cargo.toml
solar-client/src/: archive.rs  lib.rs
solar-gui/: Cargo.toml
solar-gui/src/: main.rs
solar-gui/static/: index.html  login-failed.html  login.html  ui.css  ui.js
solar/src/: archive.rs  control_socket.rs  main.rs  modbus.rs  publisher.rs  rpi.rs
src/: control_socket.rs  main.rs  modbus.rs  modbus_loop.rs  rpi.rs
