[package]
name = "solar_control"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]

[dependencies]
structopt = "0.2"
libmodbus-rs = "0.8"
morningstar = {path = "../morningstar"}
serde = "1.0"
serde_json = "1.0"
log = "0.4"
syslog = "4.0"
simple_logger = "1.0"
daemonize = "0.3"
nix = "0.11"
