[package]
name = "solar-client"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
netidx = "0.2"
anyhow = "1"
morningstar = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
libflate = "1"
log = { version = "0.4", features = ["serde"]}
