[package]
name = "solar-client"
version = "0.3.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
netidx = {version = "0.10", path = "../../netidx/netidx"}
anyhow = "1"
morningstar = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
libflate = "1"
log = { version = "0.4", features = ["serde"]}
