[package]
name = "solar-gui"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-files = "0.1"
solar-client = {path = "../solar-client"}
morningstar = "0.2"
env_logger = "0.6"
libflate = "0.1"
