[package]
name = "solar-gui"
version = "0.1.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
log = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
actix = "0.8"
actix-web = { version = "1.0", features = ["rust-tls"]}
actix-web-actors = "1.0"
actix-identity = "0.1"
pam = "0.7"
solar-client = {path = "../solar-client"}
morningstar = "0.2"
env_logger = "0.6"
libflate = "0.1"
flate2 = "1.0"
rustls = "0.15"
rand = "0.7"
