[package]
name = "solar"
version = "0.2.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
netidx = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
anyhow = "1"
daemonize = "0.4"
log = "0.4"
morningstar = { path = "../../morningstar" }
rppal = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1"
solar-client = { path = "../solar-client" }
structopt = "0.3"
syslog = "5"
chrono = "0.4"
uom = "0.28"
parking_lot = "0.10"
