[package]
name = "solar"
version = "0.3.0"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"

[dependencies]
netidx = {version = "0.10", path = "../../netidx/netidx"}
netidx-core = {version = "0.10", path = "../../netidx/netidx-core"}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
daemonize = "0.4"
log = { version = "0.4", features = ["serde"]}
morningstar = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1"
solar-client = { path = "../solar-client" }
structopt = "0.3"
syslog = "5"
chrono = "0.4"
uom = "0.32"
parking_lot = "0.11"
